--- a/pages.race.masters.html
+++ b/pages.race.masters.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>RaceMaster App Sandbox | Master Lists</title>
+    <title>Race App App Sandbox | Master Lists</title>
     <meta name="description"
         content="A table enhancing plug-in for the jQuery Javascript library, adding sorting, paging and filtering abilities to plain HTML tables with minimal effort." />
     <!-- Favicon Tags Start -->
