--- a/pages.authentication.login.html
+++ b/pages.authentication.login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>RaceMaster Sandbox | Login Page</title>
+    <title>Race App | Login Page</title>
     <meta name="description" content="Login Page" />
         <meta http-equiv="cache-control" content="no-cache" />
         
